Issue #18110: Improve wrapping in web site for Command mentioneds in command line page

--- a/src/site/resources/css/site.css
+++ b/src/site/resources/css/site.css
@@ -102,6 +102,12 @@ h1:hover:has(> a > img:first-child) .anchor {
   word-wrap: break-word !important;
 }
 
+.wrap-content .prettyprint code {
+  white-space: pre-wrap;
+  word-break: break-word;
+  text-wrap: wrap;
+}
+
 section {
   position: relative;
 }
